--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,16 +8,16 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" />
     <meta http-equiv="Pragma" content="no-cache" />
     <meta http-equiv="Expires" content="0" />
-    <meta name="build-version" content="1.6.0" />
+    <meta name="build-version" content="1.7.0" />
     <script>
       // Force cache invalidation
-      if (window.location.search.indexOf('v=1.6.0') === -1) {
-        window.location.href = window.location.origin + window.location.pathname + '?v=1.6.0';
+      if (window.location.search.indexOf('v=1.7.0') === -1) {
+        window.location.href = window.location.origin + window.location.pathname + '?v=1.7.0';
       }
     </script>
     <meta
       name="description"
-      content="SiteCache Manager - File caching and management for LucidLink"
+      content="TeamCache Manager - File caching and management for LucidLink"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -40,7 +40,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>SiteCache Manager</title>
+    <title>TeamCache Manager</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
